Added changes and completed user-services

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,4 +8,4 @@ spring.jpa.show-sql=true
 server.port=8081
 logging.level.root=INFO
 logging.level.com.product.product_service=DEBUG
-logging.file.name=logs/product-service.log
+logging.file.name=logs/user-service.log
