--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,8 @@ spring.datasource.password=9kWf.vCjXnIQ0h3A1A38zNkP*(~t05iI
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-server.port=8081
+server.port=8088
 logging.level.root=INFO
-logging.level.com.product.product_service=DEBUG
+logging.level.com.user.user-service=DEBUG
 logging.file.name=logs/user-service.log
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
