Fixed white labeled error

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,4 +9,4 @@ server.port=8080
 logging.level.root=INFO
 logging.level.com.user.user-service=DEBUG
 logging.file.name=logs/user-service.log
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
+eureka.client.enabled=false
